[tool.poetry]
name = "mydata"
version = "0.1.0"
description = "Python interface for IARP's myDATA service"
authors = ["Alex Pyrgiotis <apyrgio@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xsdata = "^24.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pydoc-markdown = "^4.8.2"
ruff = "^0.1.14"
xsdata = {extras = ["cli"], version = "^24.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
