[tool.poetry]
name = "mydata"
version = "0.1.0"
description = "Python interface for IARP's myDATA service"
authors = ["Alex Pyrgiotis <apyrgio@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.scripts]
mydata = 'mydata.__main__:cli'

[tool.poetry.dependencies]
click = "^8.1.7"
python = "^3.11"
qrcode = "^7.4.2"
requests = "^2.31.0"
rich = "^13.7.0"
xsdata = "^24.1"

[tool.poetry.group.dev.dependencies]
pydoc-markdown = "^4.8.2"
ruff = "^0.1.14"
xsdata = {extras = ["cli"], version = "^24.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
