[project]
name = "mydata-client"
version = "0.3.0"
description = "Python interface for IARP's myDATA service"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Alex Pyrgiotis", email = "apyrgio@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
    "qrcode>=7.4.2",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "xsdata>=24.1",
]

[project.scripts]
mydata = "mydata.__main__:cli"
ingest-xsd = "mydata.ingest_xsd:ingest"

[tool.hatch.build.targets.wheel]
packages = ["mydata"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pydoc-markdown>=4.8.2",
    "ruff>=0.3",
    "xsdata[cli]>=24.1",
]
